--- a/LetsEat/Main.storyboard
+++ b/LetsEat/Main.storyboard
@@ -69,7 +69,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="restaurantCell" id="elH-Bc-Ivb">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="restaurantCell" id="elH-Bc-Ivb" customClass="RestaurantCell" customModule="LetsEat" customModuleProvider="target">
                                         <rect key="frame" x="20" y="0.0" width="335" height="312"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="08f-hG-ZeL">
@@ -180,6 +180,9 @@
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <connections>
+                                            <outlet property="imgRestaurant" destination="Jf2-a9-hpe" id="OrO-xo-L8I"/>
+                                            <outlet property="lblCuisine" destination="4Ad-c4-otg" id="ElR-OV-L3P"/>
+                                            <outlet property="lblTitle" destination="gmc-BS-hjM" id="2LH-Yw-Myd"/>
                                             <segue destination="V0z-Gr-8Wq" kind="show" id="5hi-cb-YsM"/>
                                         </connections>
                                     </collectionViewCell>
